gcc/testsuite/gdc.test/compilable/imports/pr9471b.d
import imports.pr9471a;
class ClassDeclaration : AggregateDeclaration
{
    void isBaseOf();
}
