gcc/testsuite/gdc.test/fail_compilation/imports/test18938a/file.d
import imports.test18938b.file;
class IconThemeGroup : IniLikeGroup
{
    this()
    {
        super("Icon Theme");
    }

    ///setter
    string inherits()() {
    }

}
